syntax = "proto3";
option java_package = "com.chen.common.protobuf";
option java_outer_classname = "RequestMessageProto";

message RequestMessage{
	message User{
        int64 userId=1;
        string nickname=2;
        string password=3;
    }
    message SingleMessage{
        int64 sender=1;
        int64 receiverId=2;
        string content=3;
    }
    message GroupMessage{
        int64 sender=1;
        int64 groupId=2;
        string content=3;
    }
	int64 msgId=1;
	int64 sender=2;
	int32 type=4;
	string content=5;
	User user=6;
	SingleMessage singleMessage=7;
	GroupMessage groupMessage=8;
	string command=9;
	map<string,string> params=10;
	int32 code=11;
}
